# VizuoSense

./: .gitignore  Depth map  README.md  VizuoSense_OCR.ipynb
Depth_Map/: Depth.py
LLM/: Fine_tuning_Llama_2_for_navigation.ipynb  llama-7b-vizuosense-inference.ipynb
OCR/: OCR.py  VizuoSense_OCR (1).ipynb  requirements.txt
OCR/.ipynb_checkpoints/: VizuoSense_OCR-checkpoint.ipynb
Object detection and tracking/: detection.py  distance.py  inf_local.py  inf_run_local.py  inference.ipynb  readme.md  requirements.txt  yolo_webcam.py
Object detection and tracking/Depth_Map/: Depth.py
Object detection and tracking/Detection and distance extraction/: Test.py  detection.py  inf_run_local.py  main.py  readme.md  requirements.txt
Resources/: READme.md
Speech/: Readme.md  TTS_2.py  speech2-text(pin).py  text_to_speech2.py
Speech/Speech to text/: Speech_to_text v2.py  Speech_to_text.py  readme.md  speech_to_text2.py  text.py  text_to_speech.py
Speech/Speech_interface/: Speech_interface.py  more_features.md  speech.py  text_to_speech.py
Speech/Text to speech/: test.py  text_to_speech.py
app/: Cargo.toml  main.rs
app/src/: main.rs
hardware/: Hardware_Features.ipynb  Readme.md
utils/: Readme.md  client.py  server.py
